# forgejs

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  commit_note.txt  tmp_patch.diff  update_analyzer.sh
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  docs-deploy.yml  fsl-test.yml  release.yml  security.yml
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  main.rs  output.rs
cli/src/commands/: build.rs  dev.rs  init.rs  install.rs  lint.rs  migrate.rs  mod.rs  new.rs  publish.rs  serve.rs  test.rs  update.rs
compiler/: Cargo.toml
compiler/src/: error.rs  lib.rs
compiler/src/analyzer/: boundary_analyzer.rs  mod.rs  signal_analyzer.rs  type_checker.rs
compiler/src/bundler/: asset_pipeline.rs  chunk_splitter.rs  mod.rs  module_graph.rs
compiler/src/codegen/: js_emitter.rs  mod.rs  source_map.rs
compiler/src/parser/: forge_toml.rs  fx_syntax.rs  mod.rs
compiler/src/transformer/: client_transform.rs  mod.rs  server_transform.rs  signal_transform.rs
docker/: Dockerfile.forge  Dockerfile.foundry
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/foundry/: installing.md  publishing.md  registry-api.md
docs/src/getting-started/: installation.md  project-structure.md  quick-start.md
docs/src/guides/: authentication.md  data-fetching.md  deployment.md  routing.md  server-functions.md  signals-reactivity.md  testing.md
docs/src/reference/: cli.md  forge-toml.md  fsl-packages.md  fx-syntax.md
foundry/client/: Cargo.toml
foundry/client/src/: cache.rs  error.rs  lib.rs  publish.rs  registry_client.rs
foundry/client/src/manifest/: foundry_toml.rs  mod.rs
foundry/client/src/migrate/: analyzer.rs  analyzer.rs.orig  call_graph.rs  converter.rs  framework_patterns.rs  mod.rs  report.rs  resolver.rs  scaffold.rs  tree_shaker.rs
foundry/client/src/resolver/: dependency_graph.rs  lockfile.rs  mod.rs
foundry/server/: Cargo.toml
foundry/server/src/: error.rs  lib.rs  main.rs
foundry/server/src/api/: auth.rs  mod.rs  publish.rs  resolve.rs  search.rs
foundry/server/src/domain/: mod.rs  package.rs  registry.rs  version.rs
foundry/server/src/integrity/: checksum.rs  mod.rs
foundry/server/src/storage/: blob_store.rs  metadata_store.rs  mod.rs
fsl/auth/: forge.toml
fsl/auth/src/: index.fx  middleware.fx  providers.fx  session.fx  types.ts
fsl/auth/tests/: auth.test.fx
fsl/data/: forge.toml
fsl/data/src/: index.fx  query.fx  schema.fx  types.ts
fsl/data/tests/: data.test.fx
fsl/email/: forge.toml
fsl/email/src/: index.fx  send.fx  templates.fx  types.ts
fsl/email/tests/: email.test.fx
fsl/jobs/: forge.toml
fsl/jobs/src/: index.fx  queue.fx  scheduler.fx  types.ts  worker.fx
fsl/jobs/tests/: jobs.test.fx
fsl/realtime/: forge.toml
fsl/realtime/src/: broadcast.fx  channel.fx  index.fx  presence.fx  types.ts
fsl/realtime/tests/: realtime.test.fx
fsl/router/: forge.toml
fsl/router/src/: index.fx  link.fx  navigate.fx  router.fx  types.ts
fsl/router/tests/: router.test.fx
fsl/storage/: forge.toml
fsl/storage/src/: bucket.fx  file.fx  index.fx  types.ts
fsl/storage/tests/: storage.test.fx
fsl/test/: forge.toml
fsl/test/src/: assertions.fx  index.fx  mocks.fx  runner.fx  types.ts
fsl/test/tests/: test.test.fx
runtime/: Cargo.toml
runtime/src/: error.rs  lib.rs  test.rs
runtime/src/dev/: dev_server.rs  hot_reload.rs  mod.rs
runtime/src/isolate/: mod.rs  ops.rs  permissions.rs  v8_runtime.rs
runtime/src/server/: http_server.rs  mod.rs  router.rs  ssr.rs  websocket.rs
runtime/src/signals/: mod.rs  reactive_runtime.rs
scripts/: install.sh
shared/: Cargo.toml
shared/src/: diagnostics.rs  init.rs  lib.rs  manifest.rs  source_location.rs  version.rs
spec/: PHILOSOPHY.md  README.md
spec/adrs/: 001-rust-powered-compiler.md  002-oxc-parser-foundation.md  003-deno-core-runtime.md  004-agpl-license.md  005-monorepo-structure.md  006-no-virtual-dom.md  007-compile-time-boundary-enforcement.md  008-wintertc-only-server-apis.md  009-foundry-over-npm.md  010-opinionated-fsl-no-plugins.md  011-app-migration-resolved-call-graph.md
spec/specs/: 001-fx-file-format.md  002-forge-toml-schema.md  003-foundry-toml-lock.md  004-reactive-signals.md  005-boundary-enforcement.md  006-wintertc-api-surface.md  007-foundry-protocol.md
