[workspace]
resolver = "2"
members = [
    "compiler",
    "runtime",
    "cli",
    "foundry/server",
    "foundry/client",
    "shared",
]

[workspace.package]
version = "0.1.0-pre-alpha"
edition = "2021"
rust-version = "1.88"
authors = ["100monkeys AI, Inc. <hello@forgejs.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/100monkeys-ai/forgejs"
homepage = "https://forgejs.com"
description = "Forge — a Rust-powered, opinionated full-stack JavaScript framework. Forged, not assembled."

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web Framework (foundry-server + forge-runtime HTTP)
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "cargo", "color", "unicode"] }

# Cryptography
sha2 = "0.10"
blake3 = "1"

# Networking
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database (foundry-server)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# V8 / Deno Core runtime
deno_core = "0.330"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1"
futures = "0.3"
tokio-stream = { version = "0.1.18", features = ["sync"] }
async-trait = "0.1"
dashmap = "6"
indexmap = { version = "2", features = ["serde"] }
parking_lot = "0.12"

# File watching (dev mode)
notify = "7"

# Path handling
camino = { version = "1", features = ["serde1"] }

# Archive extraction (forge migrate)
flate2 = "1"
tar = "0.4"

# JavaScript/TypeScript parsing (forge migrate analyzer)
oxc_parser = "0.124"
oxc_ast = "0.124"
oxc_span = "0.124"
oxc_allocator = "0.124"

# Internal crates
forge-compiler = { path = "compiler" }
forge-runtime = { path = "runtime" }
forge-shared = { path = "shared" }
foundry-client = { path = "foundry/client" }

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
