[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "The `forge` command-line tool: new, dev, build, serve, test, lint, and Foundry integration"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-shared = { workspace = true }
forge-compiler = { workspace = true }
forge-runtime = { workspace = true }
foundry-client = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
camino = { workspace = true }
notify.workspace = true
