[package]
name = "forge-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types used across all Forge crates: manifests, diagnostics, source locations, semver"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
indexmap = { workspace = true }
semver = { version = "1", features = ["serde"] }
