[package]
name = "foundry-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Foundry registry client: dependency resolution, lockfile management, package cache"

[dependencies]
forge-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
camino = { workspace = true }
reqwest = { workspace = true }
blake3 = { workspace = true }
indexmap = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_allocator = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
