[package]
name = "foundry-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "The Foundry package registry server: publish, resolve, and serve Forge packages"

[[bin]]
name = "foundry"
path = "src/main.rs"

[dependencies]
forge-shared = { workspace = true }
foundry-client = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
camino = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
